Correct no justify or align on modal

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -23,8 +23,7 @@ body {
   padding: 16px;
   display: flex;
   gap: 16px;
-  align-items: center;
-  justify-content: space-between;
+  
   
 }
 
